<resources>
    <string name="degree_info_title" translatable="false">Χαρτογράφηση αγροκτήματος με συμμετοχή θέσης, ορίων και παρεμβολής με χάρτες</string>
    <string name="degree_info_par1" translatable="false">Σκοπός της πτυχιακής αυτής είναι σχεδίαση μια εφαρμογής σε κινητό τηλέφωνο και σε υπολογιστή γραφείου η οποία θα επιτρέπει αγρότες να χαρτογραφούν τα αγροκτήματα τους. Η Εφαρμογή θα επιτρέπει τον χρήστη όχι μόνο να ορίσει την τοποθεσία στο google maps αλλά να ορίσει τα σύνορα και τους ιδιοκτήτες όπως και την δυνατότητα παρεμβολής χαρτών με αγροτική υπηρεσία και ΤΟΕΒ. Αποτέλεσμα αυτής της εφαρμογής θα είναι ένα προϊόν το οποίο θα δίνει μια ξεκάθαρη εικόνα στον αγρότη για το χαρτογραφικό υπόβαθρο του αγροκτήματος του, καθώς και η μεταφορά δεδομένων σε άλλα συστήματα όπως εξαγωγή χάρτη σε άλλες εφαρμογές θα του επιτρέψει την έγκυρη επίλυση προβλημάτων με οργανισμούς και διαχειριστή αγροκτήματος.</string>
    <string name="degree_info_par2" translatable="false">Η εφαρμογή θα επιτρέπει την έτοιμη εισαγωγή και εξαγωγή χωραφιών από το κτήμα καθώς και τις δυνατότητες διαίρεσης και πρόσθεσης γειτονικών κτημάτων. Ύπαρξη δυνατότητας ιστορικού για το πότε δημιουργήθηκε και από ποιον θα είναι βασικά ιστορικά δεδομένα που αφορούν άλλες εφαρμογές.</string>
    <string name="degree_info_par3" translatable="false">Η εργασία αφορά έναν ή δύο σπουδαστές.</string>
    <string name="degree_info_par4" translatable="false">Παραδοτέο το βιβλίο της πτυχιακής</string>
    <string name="degree_info_par5" translatable="false">Απαιτούμενος εξοπλισμός : Java, Eclipse, Android Studio, MySQL</string>
    <string name="degree_info_sign" translatable="false">Δρ. Θεόδωρος Λάντζος</string>
    <string name="okey" translatable="false">OK</string>
    <string name="app_name">Zone Manager</string>
    <string name="app_sub_name">Farm Zones Management</string>
    <string name="land_history">Lands History</string>
    <string name="loading_list">List is loading</string>
    <string name="empty_list">List is empty</string>
    <string name="submit">Submit</string>
    <string name="accept">Accept</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="select_all">Select All</string>
    <string name="collapse_all">Collapse All</string>
    <string name="history">History</string>
    <string name="edit">Edit</string>
    <string name="restore">Restore</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="filters">Filters</string>
    <string name="list_view">List</string>
    <string name="grid_view">Grid</string>
    <string name="info">Info</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="file_type_select_title">Select File Type</string>
    <string name="file_picker_label">Select a shape file</string>
    <string name="file_backup_picker_label">Select a backup file</string>
    <string name="file_img_picker_label">Select a image</string>
    <string name="title_empty_error">Title is empty</string>
    <string name="notification_channel_name">In App Notifications</string>
    <string name="notification_channel_description">Notifications inside the Application</string>
    <string name="calendar_notification_channel_name">Calendar Notifications</string>
    <string name="calendar_notification_channel_description">Background Calendar Notifications</string>
    <string name="my_lands_label">My Land\'s</string>
    <string name="my_zones_label">My Zone\'s</string>
    <string name="file_created">File created</string>
    <string name="file_not_created">File not created</string>
    <string name="file_path_not_created">File path not created</string>
    <string name="file_something_did_not_run">Something has goes wrong, try again.</string>
    <string name="saving_label">Saving…</string>
    <string name="loading_label">Loading…</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="singular_land_label">Land</string>
    <string name="plural_land_label">Land\'s</string>
    <string name="singular_zone_label">Zone</string>
    <string name="plural_zone_label">Zone\'s</string>
    <string name="singular_event_label">Event</string>
    <string name="plural_event_label">Event\'s</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_point">Add Point</string>
    <string name="add_by_location">Add Point By Location</string>
    <string name="add_between_points">Add Point Between Points</string>
    <string name="add_between_points_select_point_1">Select First Point</string>
    <string name="add_between_points_select_point_2">Select Second Point</string>
    <string name="add_between_points_place_new_point">Place New Point</string>
    <string name="add_between_points_edit_new_point">Edit New Point</string>
    <string name="edit_point">Edit Point</string>
    <string name="delete_point">Delete Point</string>
    <string name="clear_points">Delete All Points</string>
    <string name="reset_points">Reset All Points</string>
    <string name="edit_color">Change Color</string>
    <string name="calendar_default_category">Schedule Job</string>
    <string name="default_year_picker_title">Pick A Year</string>
    <string name="all_tags_tag"> All Data </string>
    <string name="empty_tag_tag"> Without Tag </string>
    <string name="current_year">Current</string>
    <string name="import_label">Import</string>
    <string name="point_editor_not_big_size">This action need at least 2 points.</string>
    <string name="square_foot_symbol">ft²</string>
    <string name="square_yard_symbol">yd²</string>
    <string name="acres_symbol">ac</string>
    <string name="square_mile_symbol">mi²</string>
    <string name="square_meter_symbol">m²</string>
    <string name="stremma_symbol">str</string>
    <string name="hectare_symbol">ha</string>
    <string name="square_kilometer_symbol">km²</string>
    <string name="double_tap_exit">Double Tap to exit</string>
    <string name="file_input_error">Error reading the file</string>
    <string name="new_year_import_title">New Year</string>
    <string name="new_year_import_msg">Do you want to import the lands from previous year?</string>
    <string name="main_menu_snapshot_title">Year:</string>
    <string name="main_menu_user_data_label">Owner:</string>
    <string name="main_menu_live_map_button">Map</string>
    <string name="main_menu_calendar_button">Calendar</string>
    <string name="main_menu_land_button">Land\'s</string>
    <string name="land_filter_title">Land Filter</string>
    <string name="delete_lands_title">Delete Lands</string>
    <string name="delete_lands_text">Are you sure you want to delete the selected lands?</string>
    <string name="land_delete_successful">Lands Deleted</string>
    <string name="some_lands_have_zones_error">Some Lands Have Zones</string>
    <string name="land_export">Lands Exported</string>
    <string name="land_info_title">Land Info</string>
    <string name="land_name">Land Name</string>
    <string name="land_tags">Land Tags</string>
    <string name="tags_input_info">Separate tags with commas (,)</string>
    <string name="address_hint">Land Address</string>
    <string name="create_land_label">Set Land Name</string>
    <string name="edit_land_label">Edit Land Name</string>
    <string name="land_imageView">Show image above map</string>
    <string name="map_view_actions_group_title">Map Actions</string>
    <string name="lock_map">Lock map</string>
    <string name="show_road_name">Show Road Names</string>
    <string name="hide_road_name">Hide Road Names</string>
    <string name="points_actions_group_title">Points Actions</string>
    <string name="img_actions_group_title">Overlay Image</string>
    <string name="add_img">Add overlay image</string>
    <string name="remove_img">Remove overlay image</string>
    <string name="edit_img">Edit Image</string>
    <string name="opacity_img">Change Opacity</string>
    <string name="file_actions_group_title">File Actions</string>
    <string name="add_to_land_label">Add Land From File</string>
    <string name="remove_from_land_label">Subtract Land From File</string>
    <string name="land_actions_group_title">Land Actions</string>
    <string name="delete_land">Delete Land</string>
    <string name="delete_land_holes">Delete Holes</string>
    <string name="edit_land_data">Edit Data</string>
    <string name="delete_land_title">Delete Land</string>
    <string name="delete_land_text">Are you sure you want to delete this land?</string>
    <string name="land_action_created">Created</string>
    <string name="land_action_updated">Updated</string>
    <string name="land_action_restored">Restored</string>
    <string name="land_action_imported">Imported</string>
    <string name="land_action_bulk_edited">Bulk Edited</string>
    <string name="land_action_deleted">Deleted</string>
    <string name="land_action_zone_created">Zone Created</string>
    <string name="land_action_zone_updated">Zone Updated</string>
    <string name="land_action_zone_imported">Zone Imported</string>
    <string name="land_action_zone_deleted">Zone Deleted</string>
    <string name="delete_zones_dialog_title">Delete Zone\'s</string>
    <string name="delete_zones_dialog_text">Are you sure you want to delete the selected zone\'s?</string>
    <string name="zone_delete">Zones Deleted Successfully</string>
    <string name="zone_delete_error">Some zones did not delete</string>
    <string name="zone_export">Zones Exported Successfully</string>
    <string name="land_zones_filter_title">Zone Filters</string>
    <string name="delete_zone_dialog_title">Delete Zone\'s</string>
    <string name="delete_zone_dialog_text">Are you sure you want to delete the selected zone\'s?</string>
    <string name="new_zone_bar_label">New Zone</string>
    <string name="save_zone">Save Zone</string>
    <string name="delete_zone">Delete Zone</string>
    <string name="zone_actions_group_title">Zone Actions</string>
    <string name="edit_zone_title">Change Zone Title</string>
    <string name="zone_border_actions_group_title">Zone Border Actions</string>
    <string name="zone_title_label">Enter Zone Title</string>
    <string name="zone_title">Zone Title</string>
    <string name="zone_note_label">Edit Zone Note</string>
    <string name="zone_note_hint">Note</string>
    <string name="edit_zone_note">Change Zone Note</string>
    <string name="zone_tags">Zone Tags</string>
    <string name="edit_zone_tags">Change Zone Tags</string>
    <string name="zone_border_error">Zone must be 3 points minimum</string>
    <string name="zone_saved">Zone saved</string>
    <string name="zone_need_save_new">The new zone is not saved. \nDouble Tap to exit.</string>
    <string name="zone_need_save_edit">The zone changes are not saved. \nDouble Tap to exit.</string>
    <string name="zone_no_need_save">Zone don\'t need save</string>
    <string name="zone_no_valid">Zone isn\'t valid to save</string>
    <string name="zone_null_error">Something has goes wrong, try recreate the zone</string>
    <string name="iv_desc_zone_editor_center_camera">center camera button</string>
    <string name="app_settings_title">Settings</string>
    <string name="settings_section_feedback">Feedback Settings</string>
    <string name="owner_name_setting">Owner Name</string>
    <string name="owner_email_setting">Owner Email</string>
    <string name="settings_section_data">Data Settings</string>
    <string name="select_snapshot_title">Year</string>
    <string name="settings_section_ui">Ui Settings</string>
    <string name="select_theme_title">App Style</string>
    <string-array name="theme_styles">
        <item>System Default</item>
        <item>Light Theme</item>
        <item>Dark Theme</item>
    </string-array>
</resources>