<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/zone_actions_group_title">
        <menu>
            <item android:id="@+id/toolbar_action_change_zone_name"
                android:title="@string/edit_zone_title"
                android:orderInCategory="1"
                android:icon="@drawable/ic_menu_edit"
                app:showAsAction="ifRoom|withText" />
            <item android:id="@+id/toolbar_action_change_zone_note"
                android:title="@string/edit_zone_note"
                android:orderInCategory="2"
                android:icon="@drawable/ic_menu_edit"
                app:showAsAction="ifRoom|withText" />
            <item android:id="@+id/toolbar_action_change_zone_color"
                android:title="@string/edit_color"
                android:orderInCategory="3"
                android:icon="@drawable/ic_menu_color_palette"
                app:showAsAction="ifRoom|withText" />
            <item android:id="@+id/toolbar_action_save_zone"
                android:title="@string/save_zone"
                android:orderInCategory="4"
                android:icon="@drawable/ic_menu_save"
                app:showAsAction="ifRoom|withText" />
            <item android:id="@+id/toolbar_action_delete_zone"
                android:title="@string/delete_zone"
                android:orderInCategory="5"
                android:icon="@drawable/ic_menu_delete"
                app:showAsAction="ifRoom|withText" />
        </menu>
    </item>
    <item android:title="@string/zone_border_actions_group_title">
        <menu>
            <item android:id="@+id/toolbar_action_zone_add_point"
                android:title="@string/add_point"
                android:icon="@drawable/ic_drawer_menu_add"
                android:orderInCategory="1"
                app:showAsAction="ifRoom|withText" />
            <item android:id="@+id/toolbar_action_zone_add_between_points"
                android:title="@string/add_between_points"
                android:icon="@drawable/ic_drawer_menu_add_between"
                android:orderInCategory="2"
                app:showAsAction="ifRoom|withText" />
            <item android:id="@+id/toolbar_action_zone_add_point_location"
                android:title="@string/add_by_location"
                android:icon="@drawable/ic_drawer_menu_add"
                android:orderInCategory="3"
                app:showAsAction="ifRoom|withText" />
            <item android:id="@+id/toolbar_action_zone_edit_point"
                android:title="@string/edit_point"
                android:icon="@drawable/ic_drawer_menu_edit"
                android:orderInCategory="4"
                app:showAsAction="ifRoom|withText" />
            <item android:id="@+id/toolbar_action_zone_delete_point"
                android:title="@string/delete_point"
                android:icon="@drawable/ic_drawer_menu_delete"
                android:orderInCategory="5"
                app:showAsAction="ifRoom|withText" />
        </menu>
    </item>
</menu>