<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_delete_action"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@drawable/menu_ic_delete"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_export_action"
        android:orderInCategory="200"
        android:title="@string/export"
        android:icon="@drawable/menu_ic_export"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_select_all_action"
        android:orderInCategory="300"
        android:title="@string/select_all"
        android:icon="@drawable/menu_ic_select_all"
        app:showAsAction="always" />
</menu>