<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_menu_list_action">
        <item android:id="@+id/menu_item_add"
            android:orderInCategory="100"
            android:title="@string/add"
            app:actionLayout="@layout/menu_view_add"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/menu_item_delete"
            android:orderInCategory="200"
            android:title="@string/delete"
            app:actionLayout="@layout/menu_view_delete"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/menu_item_export"
            android:orderInCategory="300"
            android:title="@string/export"
            app:actionLayout="@layout/menu_view_export"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/menu_delete_action"
            android:orderInCategory="400"
            android:title="@string/delete"
            app:actionLayout="@layout/menu_view_delete"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/menu_export_action"
            android:orderInCategory="500"
            android:title="@string/export"
            app:actionLayout="@layout/menu_view_export"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/menu_select_all_action"
            android:orderInCategory="600"
            android:title="@string/select_all"
            app:actionLayout="@layout/menu_view_select_all"
            app:showAsAction="ifRoom" />
    </group>
</menu>